--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -125,9 +125,7 @@ RQ1: Do guidelines for the loading of websites on mobile devices apply to hybrid
 RQ2: If not, what new guidelines can be provided to improve the performance of hybrid applications?
 
 \section{Motivating Example}
-John's hybrid application is slow, but it could be fast if Jim, the hybrid app designer, did what we said he should!!!
-Pictures!!!
-Motivation!!!
+A hybrid application designer, John, makes an app.  He gets complaints that the application is slow, so he researches possible solutions.  One tool John found was the Google Closure Compiler.  This software minifies John's JavaScript files and removes unused lines of code from his program.  He reasons that a smaller file would be quicker to parse than a large file.  He uses this tool on all of his JavaScript files and pushes out the update.  He continues to get complaints that the application is slow.  Upon closer inspection he finds that Google Closure Compiler does not remove entire functions, even though many of them go unused.  
 
 \section{Technical Challenges}
 %For the next iteration, add a section about the technical challenges (i.e., what are the hard problems, why is this research non trivial). For example, you could talk about measuring accurately the runtime performance, dependencies, the dynamic nature of JS etc.
