small changes to get bib working

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -28,11 +28,11 @@
 
 \documentclass{acm_proc_article-sp}
 \usepackage[utf8]{inputenc}
-\usepackage[russian]{babel}
+\usepackage[Russian]{babel}
 \begin{document}
 
 \title{Mobile JavaScript Library Minimization}
-\subtitle{Milestone one}
+\subtitle{Milestone Two}
 %
 % You need the command \numberofauthors to handle the 'placement
 % and alignment' of the authors beneath the title.
@@ -190,7 +190,7 @@ The paper discussed the Importance of Frontend Performance. It also list best pr
 
 
 \bibliographystyle{plain}
-\bibliography{sigproc}
+\bibliography{sigproc-sp}
 
 
 \end{document}
