--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -119,57 +119,113 @@ William Leslie\\
 % \keywords{ACM proceedings, \LaTeX, text tagging} % NOT required for Proceedings
 
 \section{Research overview}
-Mobile devices load entire JavaScript libraries when users browse the web. This can make the mobile device slow or unresponsive if the library is large and/or if the mobile device’s resources are limited, which may lead users to look for another website to use or download an app instead of using the mobile browser. Traditional guidelines were made to improve load times and usability of these websites. JavaScript libraries are often minified to create smaller files allowing for faster download times for the files. 80\% of web page loading time is attributed to loading page resources and only 20\% is from back-end computations \cite{souders2008high}, so loading is a large concern for websites. Another approach to counter download times is hybrid applications; these store most of the JavaScript files on the device to avoid delays due to server communication. This means that the traditional guidelines for websites do not apply to hybrid applications.  To provide new guidelines, we propose the following research questions:
+Mobile devices load entire JavaScript libraries when users browse the web.
+This can make the mobile device slow or unresponsive if the library is large and/or if the mobile device’s resources are limited, which may lead users to look for another website to use or download an app instead of using the mobile browser.
+Traditional guidelines were made to improve load times and usability of these websites.
+JavaScript libraries are often minified to create smaller files allowing for faster download times for the files.
+80\% of web page loading time is attributed to loading page resources and only 20\% is from back-end computations \cite{souders2008high}, so loading is a large concern for websites.
+Another approach to counter download times is hybrid applications; these store most of the JavaScript files on the device to avoid delays due to server communication.
+This means that the traditional guidelines for websites do not apply to hybrid applications.
+ To provide new guidelines, we propose the following research questions:
 
 RQ1: Do guidelines for the loading of websites on mobile devices apply to hybrid applications?
 RQ2: If not, what new guidelines can be provided to improve the performance of hybrid applications?
 
 \section{Motivating Example}
-A hybrid application designer, John, makes an app.  He gets complaints that the application is slow, so he researches possible solutions.  One tool John found was the Google Closure Compiler.  This software minifies John's JavaScript files and removes unused lines of code from his program.  He reasons that a smaller file would be quicker to parse than a large file.  He uses this tool on all of his JavaScript files and pushes out the update.  He continues to get complaints that the application is slow.  Upon closer inspection he finds that Google Closure Compiler does not remove entire functions, even though many of them go unused.  
+A hybrid application designer, John, makes an app.
+He gets complaints that the application is slow, so he researches possible solutions.
+One tool John found was the Google Closure Compiler.
+This software minifies John's JavaScript files and removes unused lines of code from his program.
+He reasons that a smaller file would be quicker to parse than a large file.
+He uses this tool on all of his JavaScript files and pushes out the update.
+He continues to get complaints that the application is slow.
+Upon closer inspection he finds that Google Closure Compiler does not remove entire functions, even though many of them go unused.  
 
 \section{Technical Challenges}
 %For the next iteration, add a section about the technical challenges (i.e., what are the hard problems, why is this research non trivial). For example, you could talk about measuring accurately the runtime performance, dependencies, the dynamic nature of JS etc.
-Several challenges make this research a technical challenge. First, using traditional techniques on hybrid apps and determining if speed ups have occurred requires using minifiers and profiling on a large corpus of applications. This means the applications must be retrieved, processed, and judged for improvements with a process we design. Second, we must determine new guidelines to use for hybrid applications that could potentially improve performance. Literature currently does not provide many recommendations for this type of application, as will be explained in the related work section. **DO WE DO THIS? Third, we must use similar techniques in the first step, testing the guidelines we propose by processing the applications and measuring performance, then reporting which guidelines make a difference.
+Several challenges make this research a technical challenge.
+First, using traditional techniques on hybrid apps and determining if speed ups have occurred requires using minifiers and profiling on a large corpus of applications.
+This means the applications must be retrieved, processed, and judged for improvements with a process we design.
+Second, we must determine new guidelines to use for hybrid applications that could potentially improve performance.
+Literature currently does not provide many recommendations for this type of application, as will be explained in the related work section.
+**DO WE DO THIS? Third, we must use similar techniques in the first step, testing the guidelines we propose by processing the applications and measuring performance, then reporting which guidelines make a difference.
 
 \subsection{d}
 Automatically running Google CC on many applications requires making the HTML files refer to the new compiled versions of the JavaScript  ** Will J needs to update
 
 \section{Proposed Solution}
-In order to show that the traditional web page guidelines do not apply to hybrid applications, we will first use the Google Closure Compiler to create a version of the hybrid application which is minified. Then we will test its speed with Android Device Monitor with the expectation that there will be miniscule improvements. Below is a discussion of the current challenges with each required technology.
+In order to show that the traditional web page guidelines do not apply to hybrid applications, we will first use the Google Closure Compiler to create a version of the hybrid application which is minified.
+Then we will test its speed with Android Device Monitor with the expectation that there will be miniscule improvements.
+Below is a discussion of the current challenges with each required technology.
 
 
 \subsection{Google Closure Compiler}
-Google Closure Compiler is a great tool, but there are problems when compiling a large number of js files. JavaScript apps that didn’t plan on using the closure compiler might have a hard time with the compiler. The closure compiler only compiles JavaScript code, and therefore the user would need to change HTML scripts and other files to work with the newly compiled files. Also as part of a website, there might be multiple pages that use the same library of files. It would be nice to have file dependencies to help create better compiled files. We will overcome this issue 
+Google Closure Compiler is a great tool, but there are problems when compiling a large number of js files. 
+JavaScript apps that didn’t plan on using the closure compiler might have a hard time with the compiler. 
+The closure compiler only compiles JavaScript code, and therefore the user would need to change HTML scripts and other files to work with the newly compiled files. 
+Also as part of a website, there might be multiple pages that use the same library of files. 
+It would be nice to have file dependencies to help create better compiled files. 
+We will overcome this issue 
 
 
 \subsection{KJScompiler}
-It is a wrapper around Google Closure Compiler that allows annotations with information about dependencies to be used. KJSCompiler compiles the JavaScript files in the order that the dependencies dictate. This allows for the correct ordering of declarations when compiling over multiple files. The downside is that you need to have dependence information in each file, and hard to know the dependence of a system you don’t know. 
+It is a wrapper around Google Closure Compiler that allows annotations with information about dependencies to be used.
+KJSCompiler compiles the JavaScript files in the order that the dependencies dictate.
+This allows for the correct ordering of declarations when compiling over multiple files.
+The downside is that you need to have dependence information in each file, and hard to know the dependence of a system you don’t know. 
 
 
 \subsection{Ineffective traditional guidelines}
-First, we will use Google Closure Compiler to turn a hybrid app into a minified hybrid app. The closure compiler uses traditional guidelines for optimizing mobile web apps. Then we will test both the normal and minified versions of the hybrid apps. Our hypothesis is that the performance of normal and minified versions will be very similar. The traditional guidelines are used to create an optimized javascript files that are transferred over the internet to the user device. Unlike mobile web apps, hybrid apps have the JavaScript files on the device on execution. This means that file size and other minification guidelines might not affect performance as much as web apps. 
+First, we will use Google Closure Compiler to turn a hybrid app into a minified hybrid app.
+The closure compiler uses traditional guidelines for optimizing mobile web apps.
+Then we will test both the normal and minified versions of the hybrid apps.
+Our hypothesis is that the performance of normal and minified versions will be very similar.
+The traditional guidelines are used to create an optimized javascript files that are transferred over the internet to the user device.
+Unlike mobile web apps, hybrid apps have the JavaScript files on the device on execution.
+This means that file size and other minification guidelines might not affect performance as much as web apps.
+
 
 \subsection{New Guidelines}
-Secondly, after proving that traditional guidelines are ineffective, we will test and validate that new guidelines are more effective for hybrid apps. Aharon will have some suggestions for new guidelines.
+Secondly, after proving that traditional guidelines are ineffective, we will test and validate that new guidelines are more effective for hybrid apps.
+Aharon will have some suggestions for new guidelines.
 
 \section{Related Works}
 
 \subsection{Digua: Minifier and Obfuscator for Web Resources\cite{ciminiandigua} }
-Authors Alex Ciminian and Ciprian Dobre discuss their minifier tool Digua.  Digua is a minifier which works for CSS, HTML, and JavaScript.  It will find correlations between these different languages to further reduce the size of these files.  The paper states that 80\% of web page loading time is attributed to loading page resources and only 20\% is from back-end computations and the reduced file size will result in much increased web page responsiveness.  This does not apply to hybrid mobile apps.  This is because the web code for the application is already stored in the device.  The method presented in the paper would only apply to applications which need to be downloaded every time the website is hit. 
+Authors Alex Ciminian and Ciprian Dobre discuss their minifier tool Digua. 
+Digua is a minifier which works for CSS, HTML, and JavaScript.  
+It will find correlations between these different languages to further reduce the size of these files.
+The paper states that 80\% of web page loading time is attributed to loading page resources and only 20\% is from back-end computations and the reduced file size will result in much increased web page responsiveness.
+This does not apply to hybrid mobile apps.
+This is because the web code for the application is already stored in the device.
+The method presented in the paper would only apply to applications which need to be downloaded every time the website is hit. 
 
 
 
 \subsection{Semi-Automatic Rename Refactoring for JavaScript\cite{feldthaus2013semi}}
-Authors Asger Feldthaus and Anders Moller discuss a method for renaming functions using a combination of static analysis and programmer input.  While this does not apply directly to our project, it does bring up issues involved with renaming in JavaScript.  For instance, similarly named features of the code may be renamed when they should not be.  This will lead to a lot of errors in the code.  This is a limitation to minification methods as well, since, in order to maintain functionality, certain features such as functions cannot be renamed.
+Authors Asger Feldthaus and Anders Moller discuss a method for renaming functions using a combination of static analysis and programmer input.
+While this does not apply directly to our project, it does bring up issues involved with renaming in JavaScript.
+For instance, similarly named features of the code may be renamed when they should not be.
+This will lead to a lot of errors in the code.
+This is a limitation to minification methods as well, since, in order to maintain functionality, certain features such as functions cannot be renamed.
 
 \subsection{Modern JavaScript Project Optimizers\cite{zolotareva2014modern} }
-The authors of this paper discuss the state of the art of JavaScript optimizers.  Tools discussed included JSMin, YUI Compressor, UglifierJS, Google Closure Compiler, and KJSCompiler and their respective benefits and drawbacks.  For instance, KJSCompiler is an extension to Google Closure Compiler where the users can annotate dependencies between files.  This is a useful tool to research, due to the fact that it may further reduce the size of JavaScript files.
+The authors of this paper discuss the state of the art of JavaScript optimizers.
+Tools discussed included JSMin, YUI Compressor, UglifierJS, Google Closure Compiler, and KJSCompiler and their respective benefits and drawbacks.
+For instance, KJSCompiler is an extension to Google Closure Compiler where the users can annotate dependencies between files.
+This is a useful tool to research, due to the fact that it may further reduce the size of JavaScript files.
 
 \subsection{Characterizing and Detecting Performance Bugs for Smartphone Applications\cite{liu2014characterizing} }
-This paper begins by presenting common patterns among performance bugs among popular, large scale Android applications. Then, the presents PerfChecker, a static analysis tool that looks for those performance bugs (20 of which were fixed by developers). This paper focuses on bugs relating to a native application’s local code and potentially very specific causes for those bugs, such as activating multiple features in a specific sequence. So, the guidelines presented here do not directly address hybrid mobile applications, although the approach or results could in some cases be adapted for hybrids. There is little mention of web language bugs.
+This paper begins by presenting common patterns among performance bugs among popular, large scale Android applications.
+Then, the presents PerfChecker, a static analysis tool that looks for those performance bugs (20 of which were fixed by developers).
+This paper focuses on bugs relating to a native application’s local code and potentially very specific causes for those bugs, such as activating multiple features in a specific sequence.
+So, the guidelines presented here do not directly address hybrid mobile applications, although the approach or results could in some cases be adapted for hybrids.
+There is little mention of web language bugs.
 
 \subsection{High Performance Web Sites\cite{souders2008high}}
-The paper discussed the Importance of Frontend Performance. It also list best practices and shows why they are important. 
+The paper discussed the Importance of Frontend Performance.
+It also list best practices and shows why they are important.
+
 
 \begin{enumerate}
 	\item Make fewer HTTP requests
