--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -132,8 +132,10 @@ RQ1: Do guidelines for the loading of websites on mobile devices apply to hybrid
 RQ2: If not, what new guidelines can be provided to improve the performance of hybrid applications?
 
 \section{Motivating Example}
-A hybrid application designer, John, makes an app.
-He gets complaints that the application is slow, so he researches possible solutions.
+A web application designer, John, made an app, but decided that he wanted it to be mobile compatible.
+He decided the best way to do this was to make a hybrid app, which would make the application run more natively than on a browser.
+This makes the application faster on mobile devices, since not as much data has to be downloaded over a slow mobile network.
+He gets complaints that the application is slow to load, so he researches possible solutions.
 One tool John found was the Google Closure Compiler.
 This software minifies John's JavaScript files and removes unused lines of code from his program.
 He reasons that a smaller file would be quicker to parse than a large file.
