Updated new Guideline subsection

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -187,7 +187,25 @@ This means that file size and other minification guidelines might not affect per
 
 \subsection{New Guidelines}
 Secondly, after proving that traditional guidelines are ineffective, we will test and validate that new guidelines are more effective for hybrid apps.
-Aharon will have some suggestions for new guidelines.
+Aharon has suggested some new guidelines that will be more effective on hybrid apps:
+\begin{enumerate}
+	\item Creating smaller files using minification
+	\item Load only functions needed for that page
+\end{enumerate}
+
+We also did some research and found some performance techniques used by Phonegap developers:
+\begin{enumerate}
+	\item Avoid Network access
+	\item Don't wait for data to display
+	\item Use CSS Transitions
+	\item Use Native functions
+	\item Avoid Click event delay
+	\item Use CSS Sprite Sheets
+	\item Limit some UI functions
+	\item Limit access to DOM
+	\item limit libraries and frameworks
+\end{enumerate}
+
 
 \section{Related Works}
 
