--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -233,7 +233,7 @@ This is a limitation to minification methods as well, since, in order to maintai
 The authors of this paper discuss the state of the art of JavaScript optimizers.
 Tools discussed included JSMin, YUI Compressor, UglifierJS, Google Closure Compiler, and KJSCompiler and their respective benefits and drawbacks.
 For instance, KJSCompiler is an extension to Google Closure Compiler where the users can annotate dependencies between files.
-This is a useful tool to research, due to the fact that it may further reduce the size of JavaScript files.
+This is a useful tool to research, due to the fact that it may further reduce the size of JavaScript files and combine them into a single library.
 
 \subsection{Characterizing and Detecting Performance Bugs for Smartphone Applications\cite{liu2014characterizing} }
 This paper begins by presenting common patterns among performance bugs among popular, large scale Android applications.
@@ -243,8 +243,8 @@ So, the guidelines presented here do not directly address hybrid mobile applicat
 There is little mention of web language bugs.
 
 \subsection{High Performance Web Sites\cite{souders2008high}}
-The paper discussed the Importance of Frontend Performance.
-It also list best practices and shows why they are important.
+The paper discussed the importance of front-end performance.
+It also lists best practices and shows why they are important.
 
 
 \begin{enumerate}
@@ -260,7 +260,7 @@ It also list best practices and shows why they are important.
 	\item Minify JavaScript
 	\item Avoid redirects
 	\item Remove duplicate scripts
-	\item Confi gure ETags
+	\item Configure ETags
 	\item Make Ajax cacheable
 \end{enumerate}
 
