Small change plus compiled earlier changes

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -128,7 +128,7 @@ Another approach to counter download times is hybrid applications; these store m
 This means that the traditional guidelines for websites do not apply to hybrid applications.
  To provide new guidelines, we propose the following research questions:
 
-RQ1: Do guidelines for the loading of websites on mobile devices apply to hybrid applications?
+RQ1: Do guidelines for the loading of websites on mobile devices apply to hybrid applications?\\
 RQ2: If not, what new guidelines can be provided to improve the performance of hybrid applications?
 
 \section{Motivating Example}
