--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -145,12 +145,12 @@ Upon closer inspection he finds that Google Closure Compiler does not remove ent
 
 \section{Technical Challenges}
 %For the next iteration, add a section about the technical challenges (i.e., what are the hard problems, why is this research non trivial). For example, you could talk about measuring accurately the runtime performance, dependencies, the dynamic nature of JS etc.
-Several challenges make this research a technical challenge.
-First, using traditional techniques on hybrid apps and determining if speed ups have occurred requires using minifiers and profiling on a large corpus of applications.
+Several factors make this research a technically challenging.
+First, using traditional techniques on hybrid apps and determining if speed ups have occurred requires minifying and profiling on a large corpus of applications.
 This means the applications must be retrieved, processed, and judged for improvements with a process we design.
 Second, we must determine new guidelines to use for hybrid applications that could potentially improve performance.
-Literature currently does not provide many recommendations for this type of application, as will be explained in the related work section.
-**DO WE DO THIS? Third, we must use similar techniques in the first step, testing the guidelines we propose by processing the applications and measuring performance, then reporting which guidelines make a difference.
+Current literature does not provide many recommendations for this type of application, as will be explained in the related work section.
+Third, we must use similar techniques as in the first step, where we test the guidelines we propose by processing the applications and measuring their performance.  We will then report which guidelines make a difference.
 
 \subsection{Answering RQ1}
 % Automatically running Google CC on many applications requires making the HTML files refer to the new compiled versions of the JavaScript  ** Will J needs to update
@@ -170,30 +170,31 @@ Below is a discussion of the current challenges with each required technology.
 Google Closure Compiler is a great tool, but there are problems when compiling a large number of js files. 
 JavaScript apps that didn’t plan on using the closure compiler might have a hard time with the compiler. 
 The closure compiler only compiles JavaScript code, and therefore the user would need to change HTML scripts and other files to work with the newly compiled files. 
-Also as part of a website, there might be multiple pages that use the same library of files. 
+Also, as part of a website there might be multiple pages that use the same library of files. 
 It would be nice to have file dependencies to help create better compiled files. 
 We will overcome this issue 
 
 
-\subsection{KJScompiler}
-It is a wrapper around Google Closure Compiler that allows annotations with information about dependencies to be used.
-KJSCompiler compiles the JavaScript files in the order that the dependencies dictate.
-This allows for the correct ordering of declarations when compiling over multiple files.
-The downside is that you need to have dependence information in each file, and hard to know the dependence of a system you don’t know. 
+\subsection{KJSCompiler}
+KJSCompiler is a wrapper for Google Closure Compiler that allows the user to provide annotations with information about dependencies to be used.
+When KJSCompiler is run, it compiles the JavaScript files in the order that the dependency annotations dictate.
+This allows for the correct ordering of function and value declarations when compiling over multiple files.
+The downside to this software is that the user needs to have dependence information in each file. 
+This is worsened if the user does not understand the dependence structure of the target system very well. 
 
 
 \subsection{Ineffective traditional guidelines}
-First, we will use Google Closure Compiler to turn a hybrid app into a minified hybrid app.
+We will use Google Closure Compiler to turn a hybrid app into a minified hybrid app.
 The closure compiler uses traditional guidelines for optimizing mobile web apps.
 Then we will test both the normal and minified versions of the hybrid apps.
 Our hypothesis is that the performance of normal and minified versions will be very similar.
 The traditional guidelines are used to create an optimized javascript files that are transferred over the internet to the user device.
 Unlike mobile web apps, hybrid apps have the JavaScript files on the device on execution.
-This means that file size and other minification guidelines might not affect performance as much as web apps.
+This means that file size and other minification guidelines might not affect performance as much as they would for web apps.
 
 
 \subsection{New Guidelines}
-Secondly, after proving that traditional guidelines are ineffective, we will test and validate that new guidelines are more effective for hybrid apps.
+After proving that traditional guidelines are ineffective, we will test and validate that new guidelines are more effective for hybrid apps.
 Aharon has suggested some new guidelines that will be more effective on hybrid apps:
 \begin{enumerate}
 	\item Creating smaller files using minification
