Tiny paper change

--- a/sigproc-sp.tex
+++ b/sigproc-sp.tex
@@ -248,7 +248,7 @@ With regard to scale of work for the term, we are currently considering just the
 
 \subsection{Characterizing and Detecting Performance Bugs for Smartphone Applications\cite{liu2014characterizing} }
 This paper begins by presenting common patterns among performance bugs among popular, large scale Android applications.
-Then, the presents PerfChecker, a static analysis tool that looks for those performance bugs (20 of which were fixed by developers).
+Then, the paper presents PerfChecker, a static analysis tool that looks for those performance bugs (20 of which were fixed by developers).
 This paper focuses on bugs relating to a native application’s local code and potentially very specific causes for those bugs, such as activating multiple features in a specific sequence.
 So, the guidelines presented here do not directly address hybrid mobile applications, although the approach or results could in some cases be adapted for hybrids.
 For instance, the general recommendation of recycling resources on a page instead of creating memory bloat by adding and deleting constantly can be derived from the memory bloat bug type in this paper.
